# ResumeAI

./: .gitignore  README.md  agent.py  app.py  docx_content.txt  main.py  models.py  ocr_fliprobo.py  parse_docx.py  pyproject.toml  render.yaml  requirements.txt  ros_resume_new.docx
